--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,11 @@
 streamlit==1.24.0
-numpy==1.23.5
-plotly==4.14.3
-click==8.0.4
-wordcloud==1.9.2
-transformers==4.30.2
-tokenizers==0.13.3
-toml==0.10.2
-torch==2.0.1
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-streamlit-lottie==0.0.5
-spacy==3.5.3
-spacy-legacy==3.0.12
-spacy-loggers==1.0.4
-scikit-learn==1.2.2
-pandas==2.0.3
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510
+requests
+streamlit-lottie
+pandas
+numpy
+torch
+transformers
+wordcloud
+matplotlib
+scikit-learn
+spacy
